# lm-prior-for-nmt

./: .gitignore  README.md  data.dvc  experiments.dvc  makefile  pyproject.toml  requirements.txt  sys_config.py
.dvc/: config
configs/: prototype.rnn_lm_en.yaml  prototype.rnn_lm_li.yaml
configs/rnn/en_ln/: prior.lm_ln.yaml
configs/rnn/ln_en/: rnn.ln_en_base.yaml
helpers/: generic.py
models/: nmt_prior.py  sent_lm.py  translate.py
models/experiments/prototype.rnn_lm_li/21-09-21_14:22:04/: prototype.rnn_lm_li.vis
models/experiments/prototype.rnn_lm_li/21-09-21_14:24:00/: prototype.rnn_lm_li.vis
models/experiments/prototype.rnn_lm_li/21-09-21_14:24:30/: prototype.rnn_lm_li.vis
models/experiments/prototype.rnn_lm_li/21-09-21_14:25:52/: config.txt  epoch_progress.txt  grad_norms.html  progress.txt  prototype.rnn_lm_li.json  prototype.rnn_lm_li.pickle  prototype.rnn_lm_li.vis  samples.html
models/experiments/prototype.rnn_lm_li/21-09-21_14:30:48/: best_epoch.txt  config.txt  grad_norms.html  progress.txt  prototype.rnn_lm_li.json  prototype.rnn_lm_li.pickle  prototype.rnn_lm_li.vis  samples.html
modules/: layers.py  models.py  readers.py  trainer.py
modules/data/: datasets.py  vocab.py
